feat(major): Release Wynntils 2.0 (Wynncraft 2.1 + MC 1.21 - Fabric/NeoForge) (#2705)