@@ -27,8 +27,9 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
+import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.renderer.MultiBufferSource;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.bus.api.SubscribeEvent;
 
 public class GameNotificationOverlay extends Overlay {
     @Persisted
@@ -75,7 +76,7 @@ public class GameNotificationOverlay extends Overlay {
         messageQueue.add(new TimedMessageContainer(event.getMessageContainer(), getMessageDisplayLength()));
 
         if (overrideNewMessages.get() && messageQueue.size() > messageLimit.get()) {
-            messageQueue.remove(0);
+            messageQueue.removeFirst();
         }
     }
 
@@ -99,7 +100,7 @@ public class GameNotificationOverlay extends Overlay {
     }
 
     @Override
-    public void render(PoseStack poseStack, MultiBufferSource bufferSource, float partialTicks, Window window) {
+    public void render(PoseStack poseStack, MultiBufferSource bufferSource, DeltaTracker deltaTracker, Window window) {
         List<TimedMessageContainer> toRender = new ArrayList<>();
 
         ListIterator<TimedMessageContainer> messages = messageQueue.listIterator(messageQueue.size());
@@ -142,8 +143,8 @@ public class GameNotificationOverlay extends Overlay {
 
         if (this.invertGrowth.get()) {
             while (renderedValues.size() < messageLimit.get()) {
-                renderedValues.add(0, new TimedMessageContainer(new MessageContainer(""), (long)
-                        (this.messageTimeLimit.get() * 1000)));
+                renderedValues.addFirst(new TimedMessageContainer(
+                        new MessageContainer(""), (long) (this.messageTimeLimit.get() * 1000)));
             }
         }
 
@@ -171,7 +172,8 @@ public class GameNotificationOverlay extends Overlay {
     }
 
     @Override
-    public void renderPreview(PoseStack poseStack, MultiBufferSource bufferSource, float partialTicks, Window window) {
+    public void renderPreview(
+            PoseStack poseStack, MultiBufferSource bufferSource, DeltaTracker deltaTracker, Window window) {
         BufferedFontRenderer.getInstance()
                 .renderTextWithAlignment(
                         poseStack,
